deployments/kubernetes/manifest.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: quicktable
spec:
  selector:
    matchLabels:
      app: quicktable
  template:
    metadata:
      labels:
        app: quicktable
    spec:
      containers:
      - name: quicktable
        image: ghcr.io/thedevtop/quicktable:latest
        imagePullPolicy: Always
        volumeMounts:
        - name: quicktable
          mountPath: /data
      volumes:
      - name: quicktable
        persistentVolumeClaim:
          claimName: quicktable-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: quicktable
spec:
  type: ClusterIP
  selector:
    app: quicktable
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
