deployments/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quicktable
spec:
  type: ClusterIP
  selector:
    app: quicktable
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
